style(header): header no longer causes overflow due to static width

--- a/src/components/Header/header.module.less
+++ b/src/components/Header/header.module.less
@@ -6,7 +6,7 @@
   border-top: 8px solid #F5F4F1;
 
   z-index: 999;
-  width: 1920px;
+  width: 100%; // FORMERLY SET TO 1920px, HENCE OVERFLOW
   margin: 0 auto;
   height: 120px;
   display: flex;
@@ -18,13 +18,6 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-  }
-}
-
-// Responsive - Small desktop
-@media (max-width: 1280px) {
-  .container {
-    width: 1280px;
   }
 }
 
